--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -185,6 +185,30 @@
             <option value="208">MEDIA_FAST_FORWARD</option>
             <option value="usage 0x0c0173">MEDIA_AUDIO_TRACK</option>
         </optgroup>
+        <optgroup label="Keypad">
+            <option value="69">NUM_LOCK</option>
+            <option value="98">NUMPAD_DIVIDE</option>
+            <option value="55">NUMPAD_MULTIPLY</option>
+            <option value="74">NUMPAD_SUBTRACT</option>
+            <option value="78">NUMPAD_ADD</option>
+            <option value="96">NUMPAD_ENTER</option>
+            <option value="79">NUMPAD_1</option>
+            <option value="80">NUMPAD_2</option>
+            <option value="81">NUMPAD_3</option>
+            <option value="75">NUMPAD_4</option>
+            <option value="76">NUMPAD_5</option>
+            <option value="77">NUMPAD_6</option>
+            <option value="71">NUMPAD_7</option>
+            <option value="72">NUMPAD_8</option>
+            <option value="73">NUMPAD_9</option>
+            <option value="82">NUMPAD_0</option>
+            <option value="83">NUMPAD_DOT</option>
+            <option value="95">NUMPAD_JP_COMMA</option>
+            <option value="121">NUMPAD_COMMA</option>
+            <option value="117">NUMPAD_EQUALS</option>
+            <option value="179">NUMPAD_LEFT_PAREN</option>
+            <option value="180">NUMPAD_RIGHT_PAREN</option>
+        </optgroup>
         <option value="1">ESCAPE</option>
         <option value="12">MINUS</option>
         <option value="13">EQUALS</option>
@@ -200,23 +224,8 @@
         <option value="51">COMMA</option>
         <option value="52">PERIOD</option>
         <option value="53">SLASH</option>
-        <option value="55">NUMPAD_MULTIPLY</option>
         <option value="57">SPACE</option>
-        <option value="69">NUM_LOCK</option>
         <option value="70">SCROLL_LOCK</option>
-        <option value="71">NUMPAD_7</option>
-        <option value="72">NUMPAD_8</option>
-        <option value="73">NUMPAD_9</option>
-        <option value="74">NUMPAD_SUBTRACT</option>
-        <option value="75">NUMPAD_4</option>
-        <option value="76">NUMPAD_5</option>
-        <option value="77">NUMPAD_6</option>
-        <option value="78">NUMPAD_ADD</option>
-        <option value="79">NUMPAD_1</option>
-        <option value="80">NUMPAD_2</option>
-        <option value="81">NUMPAD_3</option>
-        <option value="82">NUMPAD_0</option>
-        <option value="83">NUMPAD_DOT</option>
         <!--<option value="84">(undefined)</option>-->
         <option value="85">ZENKAKU_HANKAKU</option>
         <option value="86">BACKSLASH</option>
@@ -226,9 +235,6 @@
         <option value="92">HENKAN</option>
         <option value="93">KATAKANA_HIRAGANA</option>
         <option value="94">MUHENKAN</option>
-        <option value="95">NUMPAD_COMMA</option>
-        <option value="96">NUMPAD_ENTER</option>
-        <option value="98">NUMPAD_DIVIDE</option>
         <option value="99">SYSRQ</option>
         <!--<option value="101">KEY_LINEFEED</option>-->
         <option value="110">INSERT</option>
@@ -238,11 +244,9 @@
         <option value="114">VOLUME_DOWN</option>
         <option value="115">VOLUME_UP</option>
         <option value="116">POWER</option>
-        <option value="117">NUMPAD_EQUALS</option>
         <!--<option value="118">KEY_KPPLUSMINUS</option>-->
         <option value="119">BREAK</option>
         <!--<option value="120">(undefined)</option>-->
-        <option value="121">NUMPAD_COMMA</option>
         <option value="122">KANA</option>
         <option value="123">EISU</option>
         <option value="124">YEN</option>
@@ -286,8 +290,6 @@
         <!--<option value="174">KEY_EXIT</option>-->
         <!--<option value="175">KEY_MOVE</option>-->
         <!--<option value="176">KEY_EDIT</option>-->
-        <option value="179">NUMPAD_LEFT_PAREN</option>
-        <option value="180">NUMPAD_RIGHT_PAREN</option>
         <!--<option value="181">KEY_NEW</option>-->
         <!--<option value="182">KEY_REDO</option>-->
         <!--<option value="183">F13</option>-->
@@ -586,6 +588,30 @@
             <option value="MEDIA_FAST_FORWARD">MEDIA_FAST_FORWARD</option>
             <option value="MEDIA_AUDIO_TRACK">MEDIA_AUDIO_TRACK</option>
         </optgroup>
+        <optgroup label="Keypad">
+            <option value="NUM_LOCK">NUM_LOCK</option>
+            <option value="NUMPAD_DIVIDE">NUMPAD_DIVIDE</option>
+            <option value="NUMPAD_MULTIPLY">NUMPAD_MULTIPLY</option>
+            <option value="NUMPAD_SUBTRACT">NUMPAD_SUBTRACT</option>
+            <option value="NUMPAD_ADD">NUMPAD_ADD</option>
+            <option value="NUMPAD_ENTER">NUMPAD_ENTER</option>
+            <option value="NUMPAD_1">NUMPAD_1</option>
+            <option value="NUMPAD_2">NUMPAD_2</option>
+            <option value="NUMPAD_3">NUMPAD_3</option>
+            <option value="NUMPAD_4">NUMPAD_4</option>
+            <option value="NUMPAD_5">NUMPAD_5</option>
+            <option value="NUMPAD_6">NUMPAD_6</option>
+            <option value="NUMPAD_7">NUMPAD_7</option>
+            <option value="NUMPAD_8">NUMPAD_8</option>
+            <option value="NUMPAD_9">NUMPAD_9</option>
+            <option value="NUMPAD_0">NUMPAD_0</option>
+            <option value="NUMPAD_DOT">NUMPAD_DOT</option>
+            <option value="NUMPAD_COMMA">NUMPAD_COMMA</option>
+            <!--    <option value="NUMPAD_COMMA">NUMPAD_COMMA</option>-->
+            <option value="NUMPAD_EQUALS">NUMPAD_EQUALS</option>
+            <option value="NUMPAD_LEFT_PAREN">NUMPAD_LEFT_PAREN</option>
+            <option value="NUMPAD_RIGHT_PAREN">NUMPAD_RIGHT_PAREN</option>
+        </optgroup>
         <option value="ESCAPE">ESCAPE</option>
         <option value="MINUS">MINUS</option>
         <option value="EQUALS">EQUALS</option>
@@ -601,23 +627,8 @@
         <option value="COMMA">COMMA</option>
         <option value="PERIOD">PERIOD</option>
         <option value="SLASH">SLASH</option>
-        <option value="NUMPAD_MULTIPLY">NUMPAD_MULTIPLY</option>
         <option value="SPACE">SPACE</option>
-        <option value="NUM_LOCK">NUM_LOCK</option>
         <option value="SCROLL_LOCK">SCROLL_LOCK</option>
-        <option value="NUMPAD_7">NUMPAD_7</option>
-        <option value="NUMPAD_8">NUMPAD_8</option>
-        <option value="NUMPAD_9">NUMPAD_9</option>
-        <option value="NUMPAD_SUBTRACT">NUMPAD_SUBTRACT</option>
-        <option value="NUMPAD_4">NUMPAD_4</option>
-        <option value="NUMPAD_5">NUMPAD_5</option>
-        <option value="NUMPAD_6">NUMPAD_6</option>
-        <option value="NUMPAD_ADD">NUMPAD_ADD</option>
-        <option value="NUMPAD_1">NUMPAD_1</option>
-        <option value="NUMPAD_2">NUMPAD_2</option>
-        <option value="NUMPAD_3">NUMPAD_3</option>
-        <option value="NUMPAD_0">NUMPAD_0</option>
-        <option value="NUMPAD_DOT">NUMPAD_DOT</option>
         <!--<option value="84">(undefined)</option>-->
         <option value="ZENKAKU_HANKAKU">ZENKAKU_HANKAKU</option>
         <option value="BACKSLASH">BACKSLASH</option>
@@ -627,9 +638,6 @@
         <option value="HENKAN">HENKAN</option>
         <option value="KATAKANA_HIRAGANA">KATAKANA_HIRAGANA</option>
         <option value="MUHENKAN">MUHENKAN</option>
-        <option value="NUMPAD_COMMA">NUMPAD_COMMA</option>
-        <option value="NUMPAD_ENTER">NUMPAD_ENTER</option>
-        <option value="NUMPAD_DIVIDE">NUMPAD_DIVIDE</option>
         <option value="SYSRQ">SYSRQ</option>
         <!--<option value="101">KEY_LINEFEED</option>-->
         <option value="INSERT">INSERT</option>
@@ -639,11 +647,9 @@
         <option value="VOLUME_DOWN">VOLUME_DOWN</option>
         <option value="VOLUME_UP">VOLUME_UP</option>
         <option value="POWER">POWER</option>
-        <option value="NUMPAD_EQUALS">NUMPAD_EQUALS</option>
         <!--<option value="118">KEY_KPPLUSMINUS</option>-->
         <option value="BREAK">BREAK</option>
         <!--<option value="120">(undefined)</option>-->
-        <!--    <option value="NUMPAD_COMMA">NUMPAD_COMMA</option>-->
         <option value="KANA">KANA</option>
         <option value="EISU">EISU</option>
         <option value="YEN">YEN</option>
@@ -689,8 +695,6 @@
         <!--<option value="176">KEY_EDIT</option>-->
         <!--    <option value="PAGE_UP">PAGE_UP</option>-->
         <!--    <option value="PAGE_DOWN">PAGE_DOWN</option>-->
-        <option value="NUMPAD_LEFT_PAREN">NUMPAD_LEFT_PAREN</option>
-        <option value="NUMPAD_RIGHT_PAREN">NUMPAD_RIGHT_PAREN</option>
         <!--<option value="181">KEY_NEW</option>-->
         <!--<option value="182">KEY_REDO</option>-->
         <!--<option value="183">F13</option>-->
