--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -209,6 +209,23 @@
             <option value="179">NUMPAD_LEFT_PAREN</option>
             <option value="180">NUMPAD_RIGHT_PAREN</option>
         </optgroup>
+        <optgroup label="Gamepad">
+            <option value="304">BUTTON_A</option>
+            <option value="305">BUTTON_B</option>
+            <option value="306">BUTTON_C</option>
+            <option value="307">BUTTON_X</option>
+            <option value="308">BUTTON_Y</option>
+            <option value="309">BUTTON_Z</option>
+            <option value="310">BUTTON_L1</option>
+            <option value="311">BUTTON_R1</option>
+            <option value="312">BUTTON_L2</option>
+            <option value="313">BUTTON_R2</option>
+            <option value="314">BUTTON_SELECT</option>
+            <option value="315">BUTTON_START</option>
+            <option value="316">BUTTON_MODE</option>
+            <option value="317">BUTTON_THUMBL</option>
+            <option value="318">BUTTON_THUMBR</option>
+        </optgroup>
         <option value="1">ESCAPE</option>
         <option value="12">MINUS</option>
         <option value="13">EQUALS</option>
@@ -364,21 +381,6 @@
         <option value="301">BUTTON_14</option>
         <option value="302">BUTTON_15</option>
         <option value="303">BUTTON_16</option>
-        <option value="304">BUTTON_A</option>
-        <option value="305">BUTTON_B</option>
-        <option value="306">BUTTON_C</option>
-        <option value="307">BUTTON_X</option>
-        <option value="308">BUTTON_Y</option>
-        <option value="309">BUTTON_Z</option>
-        <option value="310">BUTTON_L1</option>
-        <option value="311">BUTTON_R1</option>
-        <option value="312">BUTTON_L2</option>
-        <option value="313">BUTTON_R2</option>
-        <option value="314">BUTTON_SELECT</option>
-        <option value="315">BUTTON_START</option>
-        <option value="316">BUTTON_MODE</option>
-        <option value="317">BUTTON_THUMBL</option>
-        <option value="318">BUTTON_THUMBR</option>
         <!--<option value="352">KEY_OK</option>-->
         <!--<option value="354">KEY_GOTO</option>-->
         <!--<option value="355">KEY_CLEAR</option>-->
@@ -612,6 +614,23 @@
             <option value="NUMPAD_LEFT_PAREN">NUMPAD_LEFT_PAREN</option>
             <option value="NUMPAD_RIGHT_PAREN">NUMPAD_RIGHT_PAREN</option>
         </optgroup>
+        <optgroup label="Gamepad">
+            <option value="BUTTON_A">BUTTON_A</option>
+            <option value="BUTTON_B">BUTTON_B</option>
+            <option value="BUTTON_C">BUTTON_C</option>
+            <option value="BUTTON_X">BUTTON_X</option>
+            <option value="BUTTON_Y">BUTTON_Y</option>
+            <option value="BUTTON_Z">BUTTON_Z</option>
+            <option value="BUTTON_L1">BUTTON_L1</option>
+            <option value="BUTTON_R1">BUTTON_R1</option>
+            <option value="BUTTON_L2">BUTTON_L2</option>
+            <option value="BUTTON_R2">BUTTON_R2</option>
+            <option value="BUTTON_SELECT">BUTTON_SELECT</option>
+            <option value="BUTTON_START">BUTTON_START</option>
+            <option value="BUTTON_MODE">BUTTON_MODE</option>
+            <option value="BUTTON_THUMBL">BUTTON_THUMBL</option>
+            <option value="BUTTON_THUMBR">BUTTON_THUMBR</option>
+        </optgroup>
         <option value="ESCAPE">ESCAPE</option>
         <option value="MINUS">MINUS</option>
         <option value="EQUALS">EQUALS</option>
@@ -769,21 +788,6 @@
         <!--    <option value="BUTTON_14">BUTTON_14</option>-->
         <!--    <option value="BUTTON_15">BUTTON_15</option>-->
         <!--    <option value="BUTTON_16">BUTTON_16</option>-->
-        <option value="BUTTON_A">BUTTON_A</option>
-        <option value="BUTTON_B">BUTTON_B</option>
-        <option value="BUTTON_C">BUTTON_C</option>
-        <option value="BUTTON_X">BUTTON_X</option>
-        <option value="BUTTON_Y">BUTTON_Y</option>
-        <option value="BUTTON_Z">BUTTON_Z</option>
-        <option value="BUTTON_L1">BUTTON_L1</option>
-        <option value="BUTTON_R1">BUTTON_R1</option>
-        <option value="BUTTON_L2">BUTTON_L2</option>
-        <option value="BUTTON_R2">BUTTON_R2</option>
-        <option value="BUTTON_SELECT">BUTTON_SELECT</option>
-        <option value="BUTTON_START">BUTTON_START</option>
-        <option value="BUTTON_MODE">BUTTON_MODE</option>
-        <option value="BUTTON_THUMBL">BUTTON_THUMBL</option>
-        <option value="BUTTON_THUMBR">BUTTON_THUMBR</option>
         <!--<option value="352">KEY_OK</option>-->
         <!--<option value="354">KEY_GOTO</option>-->
         <!--<option value="355">KEY_CLEAR</option>-->
