--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -226,6 +226,16 @@
             <option value="317">BUTTON_THUMBL</option>
             <option value="318">BUTTON_THUMBR</option>
         </optgroup>
+        <optgroup label="TV">
+            <option value="377">TV</option>
+            <option value="398">PROG_RED</option>
+            <option value="399">PROG_GREEN</option>
+            <option value="400">PROG_YELLOW</option>
+            <option value="401">PROG_BLUE</option>
+            <option value="402">CHANNEL_UP</option>
+            <option value="403">CHANNEL_DOWN</option>
+            <option value="405">LAST_CHANNEL</option>
+        </optgroup>
         <option value="1">ESCAPE</option>
         <option value="12">MINUS</option>
         <option value="13">EQUALS</option>
@@ -405,7 +415,6 @@
         <!--<option value="374">KEY_KEYBOARD</option>-->
         <!--<option value="375">KEY_SCREEN</option>-->
         <!--<option value="376">KEY_PC</option>-->
-        <option value="377">TV</option>
         <!--<option value="378">KEY_TV2</option>-->
         <!--<option value="379">KEY_VCR</option>-->
         <!--<option value="380">KEY_VCR2</option>-->
@@ -426,14 +435,7 @@
         <!--<option value="395">KEY_LIST</option>-->
         <!--<option value="396">KEY_MEMO</option>-->
         <option value="397">CALENDAR</option>
-        <option value="398">PROG_RED</option>
-        <option value="399">PROG_GREEN</option>
-        <option value="400">PROG_YELLOW</option>
-        <option value="401">PROG_BLUE</option>
-        <option value="402">CHANNEL_UP</option>
-        <option value="403">CHANNEL_DOWN</option>
         <!--<option value="404">KEY_FIRST</option>-->
-        <option value="405">LAST_CHANNEL</option>
         <!--<option value="406">KEY_AB</option>-->
         <!--<option value="407">KEY_NEXT</option>-->
         <!--<option value="408">KEY_RESTART</option>-->
@@ -631,6 +633,16 @@
             <option value="BUTTON_THUMBL">BUTTON_THUMBL</option>
             <option value="BUTTON_THUMBR">BUTTON_THUMBR</option>
         </optgroup>
+        <optgroup label="TV">
+            <option value="TV">TV</option>
+            <option value="PROG_RED">PROG_RED</option>
+            <option value="PROG_GREEN">PROG_GREEN</option>
+            <option value="PROG_YELLOW">PROG_YELLOW</option>
+            <option value="PROG_BLUE">PROG_BLUE</option>
+            <option value="CHANNEL_UP">CHANNEL_UP</option>
+            <option value="CHANNEL_DOWN">CHANNEL_DOWN</option>
+            <option value="LAST_CHANNEL">LAST_CHANNEL</option>
+        </optgroup>
         <option value="ESCAPE">ESCAPE</option>
         <option value="MINUS">MINUS</option>
         <option value="EQUALS">EQUALS</option>
@@ -812,7 +824,6 @@
         <!--<option value="374">KEY_KEYBOARD</option>-->
         <!--<option value="375">KEY_SCREEN</option>-->
         <!--<option value="376">KEY_PC</option>-->
-        <option value="TV">TV</option>
         <!--<option value="378">KEY_TV2</option>-->
         <!--<option value="379">KEY_VCR</option>-->
         <!--<option value="380">KEY_VCR2</option>-->
@@ -833,14 +844,7 @@
         <!--<option value="395">KEY_LIST</option>-->
         <!--<option value="396">KEY_MEMO</option>-->
         <option value="CALENDAR">CALENDAR</option>
-        <option value="PROG_RED">PROG_RED</option>
-        <option value="PROG_GREEN">PROG_GREEN</option>
-        <option value="PROG_YELLOW">PROG_YELLOW</option>
-        <option value="PROG_BLUE">PROG_BLUE</option>
-        <option value="CHANNEL_UP">CHANNEL_UP</option>
-        <option value="CHANNEL_DOWN">CHANNEL_DOWN</option>
         <!--<option value="404">KEY_FIRST</option>-->
-        <option value="LAST_CHANNEL">LAST_CHANNEL</option>
         <!--<option value="406">KEY_AB</option>-->
         <!--<option value="407">KEY_NEXT</option>-->
         <!--<option value="408">KEY_RESTART</option>-->
