Mention how to install and select layout.

--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -48,8 +48,9 @@
     </nav>
 
     <p>
-        Specify mappings below.
-        For an advanced remapping take a look at <a href="/complex">complex</a> customization.
+        Specify mappings below,
+        download and install ExKeyMo app,
+        select ExKeyMo layout in physical keyboard settings.
     </p>
 
     <form action="/simple" method="post">
