--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -170,21 +170,29 @@
             <option value="88">F12</option>
         </optgroup>
         <optgroup label="Media">
-            <option value="128">MEDIA_STOP</option>
-            <option value="160">MEDIA_CLOSE_CD</option>
-            <option value="161">MEDIA_EJECT_CD</option>
-            <option value="162">MEDIA_EJECT_CLOSE_CD</option>
-            <option value="163">MEDIA_NEXT</option>
-            <option value="164">MEDIA_PLAY_PAUSE</option>
-            <option value="165">MEDIA_PREVIOUS</option>
-            <option value="166">MEDIA_STOP_CD</option>
-            <option value="167">MEDIA_RECORD</option>
+            <option value="224">BRIGHTNESS_DOWN</option>
+            <option value="225">BRIGHTNESS_UP</option>
+
+            <option value="113">VOLUME_MUTE</option>
+            <option value="114">VOLUME_DOWN</option>
+            <option value="115">VOLUME_UP</option>
+
             <option value="168">MEDIA_REWIND</option>
-            <option value="200">MEDIA_PLAY_CD</option>
-            <option value="201">MEDIA_PAUSE_CD</option>
-            <option value="207">MEDIA_PLAY</option>
+            <option value="164">MEDIA_PLAY_PAUSE</option>
             <option value="208">MEDIA_FAST_FORWARD</option>
-            <option value="usage 0x0c0173">MEDIA_AUDIO_TRACK</option>
+
+            <!--            <option value="128">MEDIA_STOP</option>-->
+            <!--            <option value="160">MEDIA_CLOSE_CD</option>-->
+            <!--            <option value="161">MEDIA_EJECT_CD</option>-->
+            <!--            <option value="162">MEDIA_EJECT_CLOSE_CD</option>-->
+            <!--            <option value="163">MEDIA_NEXT</option>-->
+            <!--            <option value="165">MEDIA_PREVIOUS</option>-->
+            <!--            <option value="166">MEDIA_STOP_CD</option>-->
+            <!--            <option value="167">MEDIA_RECORD</option>-->
+            <!--            <option value="200">MEDIA_PLAY_CD</option>-->
+            <!--            <option value="201">MEDIA_PAUSE_CD</option>-->
+            <!--            <option value="207">MEDIA_PLAY</option>-->
+            <!--            <option value="usage 0x0c0173">MEDIA_AUDIO_TRACK</option>-->
         </optgroup>
         <optgroup label="Keypad">
             <option value="69">NUM_LOCK</option>
@@ -268,9 +276,6 @@
         <option value="110">INSERT</option>
         <option value="111">FORWARD_DEL</option>
         <!--<option value="112">KEY_MACRO</option>-->
-        <option value="113">VOLUME_MUTE</option>
-        <option value="114">VOLUME_DOWN</option>
-        <option value="115">VOLUME_UP</option>
         <option value="116">POWER</option>
         <!--<option value="118">KEY_KPPLUSMINUS</option>-->
         <option value="119">BREAK</option>
@@ -357,8 +362,6 @@
         <!--<option value="221">KEY_SHOP</option>-->
         <!--<option value="222">KEY_ALTERASE</option>-->
         <!--<option value="223">KEY_CANCEL</option>-->
-        <option value="224">BRIGHTNESS_DOWN</option>
-        <option value="225">BRIGHTNESS_UP</option>
         <option value="226">HEADSETHOOK</option>
         <option value="256">BUTTON_1</option>
         <option value="257">BUTTON_2</option>
@@ -493,8 +496,8 @@
         <option value="583">ASSIST</option>
         <!--Keys defined by HID usages-->
         <option value="usage 0x0c0067">WINDOW</option>
-        <option value="usage 0x0c006F">BRIGHTNESS_UP</option>
-        <option value="usage 0x0c0070">BRIGHTNESS_DOWN</option>
+        <!--    <option value="usage 0x0c006F">BRIGHTNESS_UP</option>-->
+        <!--    <option value="usage 0x0c0070">BRIGHTNESS_DOWN</option>-->
         <option value="usage 0x0c019C">PROFILE_SWITCH</option>
         <option value="usage 0x0c01A2">ALL_APPS</option>
     </template>
@@ -577,21 +580,29 @@
             <option value="F12">F12</option>
         </optgroup>
         <optgroup label="Media">
-            <option value="MEDIA_STOP">MEDIA_STOP</option>
-            <option value="MEDIA_CLOSE">MEDIA_CLOSE</option>
-            <option value="MEDIA_EJECT">MEDIA_EJECT</option>
-            <!--    <option value="MEDIA_EJECT">MEDIA_EJECT</option>-->
-            <option value="MEDIA_NEXT">MEDIA_NEXT</option>
-            <option value="MEDIA_PLAY_PAUSE">MEDIA_PLAY_PAUSE</option>
-            <option value="MEDIA_PREVIOUS">MEDIA_PREVIOUS</option>
-            <!--    <option value="MEDIA_STOP">MEDIA_STOP</option>-->
-            <option value="MEDIA_RECORD">MEDIA_RECORD</option>
+            <option value="BRIGHTNESS_DOWN">BRIGHTNESS_DOWN</option>
+            <option value="BRIGHTNESS_UP">BRIGHTNESS_UP</option>
+
+            <option value="VOLUME_MUTE">VOLUME_MUTE</option>
+            <option value="VOLUME_DOWN">VOLUME_DOWN</option>
+            <option value="VOLUME_UP">VOLUME_UP</option>
+
             <option value="MEDIA_REWIND">MEDIA_REWIND</option>
-            <!--    <option value="MEDIA_PLAY">MEDIA_PLAY</option>-->
-            <option value="MEDIA_PAUSE">MEDIA_PAUSE</option>
-            <!--    <option value="MEDIA_PLAY">MEDIA_PLAY</option>-->
+            <option value="MEDIA_PLAY_PAUSE">MEDIA_PLAY_PAUSE</option>
             <option value="MEDIA_FAST_FORWARD">MEDIA_FAST_FORWARD</option>
-            <option value="MEDIA_AUDIO_TRACK">MEDIA_AUDIO_TRACK</option>
+
+            <!--        <option value="MEDIA_STOP">MEDIA_STOP</option>-->
+            <!--        <option value="MEDIA_CLOSE">MEDIA_CLOSE</option>-->
+            <!--        <option value="MEDIA_EJECT">MEDIA_EJECT</option>-->
+            <!--    <option value="MEDIA_EJECT">MEDIA_EJECT</option>-->
+            <!--        <option value="MEDIA_NEXT">MEDIA_NEXT</option>-->
+            <!--        <option value="MEDIA_PREVIOUS">MEDIA_PREVIOUS</option>-->
+            <!--    <option value="MEDIA_STOP">MEDIA_STOP</option>-->
+            <!--        <option value="MEDIA_RECORD">MEDIA_RECORD</option>-->
+            <!--    <option value="MEDIA_PLAY">MEDIA_PLAY</option>-->
+            <!--        <option value="MEDIA_PAUSE">MEDIA_PAUSE</option>-->
+            <!--    <option value="MEDIA_PLAY">MEDIA_PLAY</option>-->
+            <!--        <option value="MEDIA_AUDIO_TRACK">MEDIA_AUDIO_TRACK</option>-->
         </optgroup>
         <optgroup label="Keypad">
             <option value="NUM_LOCK">NUM_LOCK</option>
@@ -675,9 +686,6 @@
         <option value="INSERT">INSERT</option>
         <option value="FORWARD_DEL">FORWARD_DEL</option>
         <!--<option value="112">KEY_MACRO</option>-->
-        <option value="VOLUME_MUTE">VOLUME_MUTE</option>
-        <option value="VOLUME_DOWN">VOLUME_DOWN</option>
-        <option value="VOLUME_UP">VOLUME_UP</option>
         <option value="POWER">POWER</option>
         <!--<option value="118">KEY_KPPLUSMINUS</option>-->
         <option value="BREAK">BREAK</option>
@@ -766,8 +774,6 @@
         <!--<option value="221">KEY_SHOP</option>-->
         <!--<option value="222">KEY_ALTERASE</option>-->
         <!--<option value="223">KEY_CANCEL</option>-->
-        <option value="BRIGHTNESS_DOWN">BRIGHTNESS_DOWN</option>
-        <option value="BRIGHTNESS_UP">BRIGHTNESS_UP</option>
         <option value="HEADSETHOOK">HEADSETHOOK</option>
         <option value="BUTTON_1">BUTTON_1</option>
         <option value="BUTTON_2">BUTTON_2</option>
@@ -902,8 +908,8 @@
         <option value="ASSIST">ASSIST</option>
         <!--Keys defined by HID usages-->
         <option value="WINDOW">WINDOW</option>
-        <option value="BRIGHTNESS_UP">BRIGHTNESS_UP</option>
-        <option value="BRIGHTNESS_DOWN">BRIGHTNESS_DOWN</option>
+        <!--    <option value="BRIGHTNESS_UP">BRIGHTNESS_UP</option>-->
+        <!--    <option value="BRIGHTNESS_DOWN">BRIGHTNESS_DOWN</option>-->
         <option value="PROFILE_SWITCH">PROFILE_SWITCH</option>
         <option value="ALL_APPS">ALL_APPS</option>
     </template>
