Revert "Remove BUTTON prefix from Gamepad keys"
This reverts commit 892a5a0b8f7222c0a6b2a867a0fa7d17fe3b5cb7.

--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -219,21 +219,21 @@
             <option value="180">NUMPAD_RIGHT_PAREN</option>
         </optgroup>
         <optgroup label="Gamepad">
-            <option value="304">A</option>
-            <option value="305">B</option>
-            <option value="306">C</option>
-            <option value="307">X</option>
-            <option value="308">Y</option>
-            <option value="309">Z</option>
-            <option value="310">L1</option>
-            <option value="311">R1</option>
-            <option value="312">L2</option>
-            <option value="313">R2</option>
-            <option value="314">SELECT</option>
-            <option value="315">START</option>
-            <option value="316">MODE</option>
-            <option value="317">THUMBL</option>
-            <option value="318">THUMBR</option>
+            <option value="304">BUTTON_A</option>
+            <option value="305">BUTTON_B</option>
+            <option value="306">BUTTON_C</option>
+            <option value="307">BUTTON_X</option>
+            <option value="308">BUTTON_Y</option>
+            <option value="309">BUTTON_Z</option>
+            <option value="310">BUTTON_L1</option>
+            <option value="311">BUTTON_R1</option>
+            <option value="312">BUTTON_L2</option>
+            <option value="313">BUTTON_R2</option>
+            <option value="314">BUTTON_SELECT</option>
+            <option value="315">BUTTON_START</option>
+            <option value="316">BUTTON_MODE</option>
+            <option value="317">BUTTON_THUMBL</option>
+            <option value="318">BUTTON_THUMBR</option>
         </optgroup>
         <optgroup label="TV">
             <option value="377">TV</option>
