Remove BUTTON_## from keys

--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -363,38 +363,38 @@
         <!--<option value="222">KEY_ALTERASE</option>-->
         <!--<option value="223">KEY_CANCEL</option>-->
         <option value="226">HEADSETHOOK</option>
-        <option value="256">BUTTON_1</option>
-        <option value="257">BUTTON_2</option>
-        <option value="258">BUTTON_3</option>
-        <option value="259">BUTTON_4</option>
-        <option value="260">BUTTON_5</option>
-        <option value="261">BUTTON_6</option>
-        <option value="262">BUTTON_7</option>
-        <option value="263">BUTTON_8</option>
-        <option value="264">BUTTON_9</option>
-        <option value="265">BUTTON_10</option>
-        <option value="266">BUTTON_11</option>
-        <option value="267">BUTTON_12</option>
-        <option value="268">BUTTON_13</option>
-        <option value="269">BUTTON_14</option>
-        <option value="270">BUTTON_15</option>
-        <option value="271">BUTTON_16</option>
-        <option value="288">BUTTON_1</option>
-        <option value="289">BUTTON_2</option>
-        <option value="290">BUTTON_3</option>
-        <option value="291">BUTTON_4</option>
-        <option value="292">BUTTON_5</option>
-        <option value="293">BUTTON_6</option>
-        <option value="294">BUTTON_7</option>
-        <option value="295">BUTTON_8</option>
-        <option value="296">BUTTON_9</option>
-        <option value="297">BUTTON_10</option>
-        <option value="298">BUTTON_11</option>
-        <option value="299">BUTTON_12</option>
-        <option value="300">BUTTON_13</option>
-        <option value="301">BUTTON_14</option>
-        <option value="302">BUTTON_15</option>
-        <option value="303">BUTTON_16</option>
+        <!--    <option value="256">BUTTON_1</option>-->
+        <!--    <option value="257">BUTTON_2</option>-->
+        <!--    <option value="258">BUTTON_3</option>-->
+        <!--    <option value="259">BUTTON_4</option>-->
+        <!--    <option value="260">BUTTON_5</option>-->
+        <!--    <option value="261">BUTTON_6</option>-->
+        <!--    <option value="262">BUTTON_7</option>-->
+        <!--    <option value="263">BUTTON_8</option>-->
+        <!--    <option value="264">BUTTON_9</option>-->
+        <!--    <option value="265">BUTTON_10</option>-->
+        <!--    <option value="266">BUTTON_11</option>-->
+        <!--    <option value="267">BUTTON_12</option>-->
+        <!--    <option value="268">BUTTON_13</option>-->
+        <!--    <option value="269">BUTTON_14</option>-->
+        <!--    <option value="270">BUTTON_15</option>-->
+        <!--    <option value="271">BUTTON_16</option>-->
+        <!--    <option value="288">BUTTON_1</option>-->
+        <!--    <option value="289">BUTTON_2</option>-->
+        <!--    <option value="290">BUTTON_3</option>-->
+        <!--    <option value="291">BUTTON_4</option>-->
+        <!--    <option value="292">BUTTON_5</option>-->
+        <!--    <option value="293">BUTTON_6</option>-->
+        <!--    <option value="294">BUTTON_7</option>-->
+        <!--    <option value="295">BUTTON_8</option>-->
+        <!--    <option value="296">BUTTON_9</option>-->
+        <!--    <option value="297">BUTTON_10</option>-->
+        <!--    <option value="298">BUTTON_11</option>-->
+        <!--    <option value="299">BUTTON_12</option>-->
+        <!--    <option value="300">BUTTON_13</option>-->
+        <!--    <option value="301">BUTTON_14</option>-->
+        <!--    <option value="302">BUTTON_15</option>-->
+        <!--    <option value="303">BUTTON_16</option>-->
         <!--<option value="352">KEY_OK</option>-->
         <!--<option value="354">KEY_GOTO</option>-->
         <!--<option value="355">KEY_CLEAR</option>-->
@@ -775,22 +775,22 @@
         <!--<option value="222">KEY_ALTERASE</option>-->
         <!--<option value="223">KEY_CANCEL</option>-->
         <option value="HEADSETHOOK">HEADSETHOOK</option>
-        <option value="BUTTON_1">BUTTON_1</option>
-        <option value="BUTTON_2">BUTTON_2</option>
-        <option value="BUTTON_3">BUTTON_3</option>
-        <option value="BUTTON_4">BUTTON_4</option>
-        <option value="BUTTON_5">BUTTON_5</option>
-        <option value="BUTTON_6">BUTTON_6</option>
-        <option value="BUTTON_7">BUTTON_7</option>
-        <option value="BUTTON_8">BUTTON_8</option>
-        <option value="BUTTON_9">BUTTON_9</option>
-        <option value="BUTTON_10">BUTTON_10</option>
-        <option value="BUTTON_11">BUTTON_11</option>
-        <option value="BUTTON_12">BUTTON_12</option>
-        <option value="BUTTON_13">BUTTON_13</option>
-        <option value="BUTTON_14">BUTTON_14</option>
-        <option value="BUTTON_15">BUTTON_15</option>
-        <option value="BUTTON_16">BUTTON_16</option>
+        <!--    <option value="BUTTON_1">BUTTON_1</option>-->
+        <!--    <option value="BUTTON_2">BUTTON_2</option>-->
+        <!--    <option value="BUTTON_3">BUTTON_3</option>-->
+        <!--    <option value="BUTTON_4">BUTTON_4</option>-->
+        <!--    <option value="BUTTON_5">BUTTON_5</option>-->
+        <!--    <option value="BUTTON_6">BUTTON_6</option>-->
+        <!--    <option value="BUTTON_7">BUTTON_7</option>-->
+        <!--    <option value="BUTTON_8">BUTTON_8</option>-->
+        <!--    <option value="BUTTON_9">BUTTON_9</option>-->
+        <!--    <option value="BUTTON_10">BUTTON_10</option>-->
+        <!--    <option value="BUTTON_11">BUTTON_11</option>-->
+        <!--    <option value="BUTTON_12">BUTTON_12</option>-->
+        <!--    <option value="BUTTON_13">BUTTON_13</option>-->
+        <!--    <option value="BUTTON_14">BUTTON_14</option>-->
+        <!--    <option value="BUTTON_15">BUTTON_15</option>-->
+        <!--    <option value="BUTTON_16">BUTTON_16</option>-->
         <!--    <option value="BUTTON_1">BUTTON_1</option>-->
         <!--    <option value="BUTTON_2">BUTTON_2</option>-->
         <!--    <option value="BUTTON_3">BUTTON_3</option>-->
