Controls and symbols

--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -102,6 +102,27 @@
             <option value="126">META_RIGHT</option>
             <option value="464">FUNCTION</option>
         </optgroup>
+        <optgroup label="Controls and symbols">
+            <option value="1">ESCAPE</option>
+            <option value="12">MINUS</option>
+            <option value="13">EQUALS</option>
+            <option value="14">DEL</option>
+            <option value="15">TAB</option>
+            <option value="26">LEFT_BRACKET</option>
+            <option value="27">RIGHT_BRACKET</option>
+            <option value="28">ENTER</option>
+            <option value="39">SEMICOLON</option>
+            <option value="40">APOSTROPHE</option>
+            <option value="41">GRAVE</option>
+            <option value="43">BACKSLASH</option>
+            <option value="51">COMMA</option>
+            <option value="52">PERIOD</option>
+            <option value="53">SLASH</option>
+            <option value="57">SPACE</option>
+            <option value="86">102ND</option>
+            <option value="110">INSERT</option>
+            <option value="111">FORWARD_DEL</option>
+        </optgroup>
         <optgroup label="Navigation">
             <option value="103">DPAD_UP</option>
             <option value="108">DPAD_DOWN</option>
@@ -248,26 +269,9 @@
             <option value="403">CHANNEL_DOWN</option>
             <option value="405">LAST_CHANNEL</option>
         </optgroup>
-        <option value="1">ESCAPE</option>
-        <option value="12">MINUS</option>
-        <option value="13">EQUALS</option>
-        <option value="14">DEL</option>
-        <option value="15">TAB</option>
-        <option value="26">LEFT_BRACKET</option>
-        <option value="27">RIGHT_BRACKET</option>
-        <option value="28">ENTER</option>
-        <option value="39">SEMICOLON</option>
-        <option value="40">APOSTROPHE</option>
-        <option value="41">GRAVE</option>
-        <option value="43">BACKSLASH</option>
-        <option value="51">COMMA</option>
-        <option value="52">PERIOD</option>
-        <option value="53">SLASH</option>
-        <option value="57">SPACE</option>
         <option value="70">SCROLL_LOCK</option>
         <!--<option value="84">(undefined)</option>-->
         <option value="85">ZENKAKU_HANKAKU</option>
-        <option value="86">BACKSLASH</option>
         <option value="89">RO</option>
         <!--<option value="90">KEY_KATAKANA</option>-->
         <!--<option value="91">KEY_HIRAGANA</option>-->
@@ -276,8 +280,6 @@
         <option value="94">MUHENKAN</option>
         <option value="99">SYSRQ</option>
         <!--<option value="101">KEY_LINEFEED</option>-->
-        <option value="110">INSERT</option>
-        <option value="111">FORWARD_DEL</option>
         <!--<option value="112">KEY_MACRO</option>-->
         <option value="116">POWER</option>
         <!--<option value="118">KEY_KPPLUSMINUS</option>-->
@@ -514,6 +516,26 @@
             <option value="META_RIGHT">META_RIGHT</option>
             <option value="FUNCTION">FUNCTION</option>
         </optgroup>
+        <optgroup label="Controls and symbols">
+            <option value="ESCAPE">ESCAPE</option>
+            <option value="MINUS">MINUS</option>
+            <option value="EQUALS">EQUALS</option>
+            <option value="DEL">DEL</option>
+            <option value="TAB">TAB</option>
+            <option value="LEFT_BRACKET">LEFT_BRACKET</option>
+            <option value="RIGHT_BRACKET">RIGHT_BRACKET</option>
+            <option value="ENTER">ENTER</option>
+            <option value="SEMICOLON">SEMICOLON</option>
+            <option value="APOSTROPHE">APOSTROPHE</option>
+            <option value="GRAVE">GRAVE</option>
+            <option value="BACKSLASH">BACKSLASH</option>
+            <option value="COMMA">COMMA</option>
+            <option value="PERIOD">PERIOD</option>
+            <option value="SLASH">SLASH</option>
+            <option value="SPACE">SPACE</option>
+            <option value="INSERT">INSERT</option>
+            <option value="FORWARD_DEL">FORWARD_DEL</option>
+        </optgroup>
         <optgroup label="Navigation">
             <option value="DPAD_UP">DPAD_UP</option>
             <option value="DPAD_DOWN">DPAD_DOWN</option>
@@ -658,26 +680,10 @@
             <option value="CHANNEL_DOWN">CHANNEL_DOWN</option>
             <option value="LAST_CHANNEL">LAST_CHANNEL</option>
         </optgroup>
-        <option value="ESCAPE">ESCAPE</option>
-        <option value="MINUS">MINUS</option>
-        <option value="EQUALS">EQUALS</option>
-        <option value="DEL">DEL</option>
-        <option value="TAB">TAB</option>
-        <option value="LEFT_BRACKET">LEFT_BRACKET</option>
-        <option value="RIGHT_BRACKET">RIGHT_BRACKET</option>
-        <option value="ENTER">ENTER</option>
-        <option value="SEMICOLON">SEMICOLON</option>
-        <option value="APOSTROPHE">APOSTROPHE</option>
-        <option value="GRAVE">GRAVE</option>
-        <option value="BACKSLASH">BACKSLASH</option>
-        <option value="COMMA">COMMA</option>
-        <option value="PERIOD">PERIOD</option>
-        <option value="SLASH">SLASH</option>
-        <option value="SPACE">SPACE</option>
         <option value="SCROLL_LOCK">SCROLL_LOCK</option>
         <!--<option value="84">(undefined)</option>-->
         <option value="ZENKAKU_HANKAKU">ZENKAKU_HANKAKU</option>
-        <option value="BACKSLASH">BACKSLASH</option>
+        <!--    <option value="BACKSLASH">BACKSLASH</option>-->
         <option value="RO">RO</option>
         <!--<option value="90">KEY_KATAKANA</option>-->
         <!--<option value="91">KEY_HIRAGANA</option>-->
@@ -686,8 +692,6 @@
         <option value="MUHENKAN">MUHENKAN</option>
         <option value="SYSRQ">SYSRQ</option>
         <!--<option value="101">KEY_LINEFEED</option>-->
-        <option value="INSERT">INSERT</option>
-        <option value="FORWARD_DEL">FORWARD_DEL</option>
         <!--<option value="112">KEY_MACRO</option>-->
         <option value="POWER">POWER</option>
         <!--<option value="118">KEY_KPPLUSMINUS</option>-->
