Update title to make it look better in google search results.

--- a/src/main/resources/public/simple.html
+++ b/src/main/resources/public/simple.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Android external keyboard remapping without root">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ExKeyMo > Simple</title>
+    <title>Android external keyboard remapping without root</title>
     <link rel="stylesheet" href="/common.css">
     <style>
         form {
