--- a/src/main/resources/public/complex.html
+++ b/src/main/resources/public/complex.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Android external keyboard remapping without root">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ExKeyMo > Complex</title>
+    <title>Android external keyboard remapping without root</title>
     <link rel="stylesheet" href="/common.css">
 </head>
 <body>
