comma instead of slash in modifier keys enumeration

--- a/src/main/resources/public/docs.html
+++ b/src/main/resources/public/docs.html
@@ -79,7 +79,7 @@ map key 1 CAPS_LOCK
         (note that it uses 'scan code' to refer to a key code).
     </p>
     <p>
-        More complex customization (combinations with modifier keys like <kbd>Ctrl</kbd>/<kbd>Alt</kbd>/<kbd>Shift</kbd>
+        More complex customization (combinations with modifier keys like <kbd>Ctrl</kbd>, <kbd>Alt</kbd>, <kbd>Shift</kbd>
         or producing non-English characters) is also possible.
         Learn more in <a target="_blank" href="https://source.android.com/docs/core/input/key-character-map-files#how-key-combinations-are-mapped-to-behaviors">official documentation</a>.
     </p>
