Remove semicolons from JS code

--- a/src/main/resources/public/complex.html
+++ b/src/main/resources/public/complex.html
@@ -39,12 +39,12 @@
 
     <script>
         function showSecondLayout(show) {
-            const layout2 = document.getElementById("layout2");
-            layout2.disabled = !show;
-            layout2.hidden = !show;
+            const layout2 = document.getElementById("layout2")
+            layout2.disabled = !show
+            layout2.hidden = !show
         }
 
-        showSecondLayout(document.getElementById("add-second-layout").checked);
+        showSecondLayout(document.getElementById("add-second-layout").checked)
     </script>
 </div>
 </body>
